updated distplot to histplot

--- a/notebooks/7b - Exercise - Hotel Bookings - A Solution.ipynb
+++ b/notebooks/7b - Exercise - Hotel Bookings - A Solution.ipynb
@@ -2222,7 +2222,7 @@
    ],
    "source": [
     "plt.subplots(figsize=(8,6))\n",
-    "sns.distplot(data.is_requested, kde=False);"
+    "sns.histplot(data.is_requested, kde=False);"
    ]
   },
   {
@@ -2256,8 +2256,8 @@
     "f, axs = plt.subplots(14, 2, figsize=(20,70))\n",
     "\n",
     "for i, feat in enumerate(data.iloc[:,1:29].values.T):\n",
-    "    sns.distplot(feat[y_train==0], ax=axs.flat[i], kde=False, label='{}: {}'.format('Not requested', len(y_train[y_train==0])))\n",
-    "    sns.distplot(feat[y_train==1], ax=axs.flat[i], kde=False, label='{}: {}'.format('Requested',     len(y_train[y_train==1])))\n",
+    "    sns.histplot(feat[y_train==0], ax=axs.flat[i], color='steelblue', stat='density', common_norm=False, kde=False, label='{}: {}'.format('Not requested', len(y_train[y_train==0])))\n",
+    "    sns.histplot(feat[y_train==1], ax=axs.flat[i], color='orange',    stat='density', common_norm=False, kde=False, label='{}: {}'.format('Requested',     len(y_train[y_train==1])))\n",
     "    axs.flat[i].set_title('{}:  mean: {}  std: {}'.format(list(data.iloc[:,1:29].columns)[i], abs(feat.mean().round(2)), feat.std().round(2)))\n",
     "    axs.flat[i].legend()\n",
     "plt.tight_layout();"
@@ -2937,8 +2937,8 @@
     "pt = PowerTransformer(method='yeo-johnson')\n",
     "\n",
     "for i, feat in enumerate(X_train_std[:,:29].T):\n",
-    "    sns.distplot(pt.fit_transform(feat[y_train==0].reshape(-1, 1)), ax=axs.flat[i], kde=False, label='{}: {}'.format('Not requested', len(y_train[y_train==0])))\n",
-    "    sns.distplot(pt.fit_transform(feat[y_train==1].reshape(-1, 1)), ax=axs.flat[i], kde=False, label='{}: {}'.format('Requested',     len(y_train[y_train==1])))\n",
+    "    sns.histplot(pt.fit_transform(feat[y_train==0].reshape(-1, 1)), ax=axs.flat[i], color='steelblue', stat='density', common_norm=False, kde=False, label='{}: {}'.format('Not requested', len(y_train[y_train==0])))\n",
+    "    sns.histplot(pt.fit_transform(feat[y_train==1].reshape(-1, 1)), ax=axs.flat[i], color='orange',    stat='density', common_norm=False, kde=False, label='{}: {}'.format('Requested',     len(y_train[y_train==1])))\n",
     "    axs.flat[i].set_title('{}:  mean: {}  std: {}'.format(list(data.iloc[:,1:30].columns)[i], abs(feat.mean().round(2)), feat.std().round(2)))\n",
     "    axs.flat[i].legend()\n",
     "plt.tight_layout();"
@@ -6161,9 +6161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mlweek",
    "language": "python",
-   "name": "python3"
+   "name": "mlweek"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6175,7 +6175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
