--- a/notebooks/2 - Cross-validation.ipynb
+++ b/notebooks/2 - Cross-validation.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -146,12 +146,14 @@
        " 'max_error',\n",
        " 'neg_median_absolute_error',\n",
        " 'neg_mean_absolute_error',\n",
+       " 'neg_mean_absolute_percentage_error',\n",
        " 'neg_mean_squared_error',\n",
        " 'neg_mean_squared_log_error',\n",
        " 'neg_root_mean_squared_error',\n",
        " 'neg_mean_poisson_deviance',\n",
        " 'neg_mean_gamma_deviance',\n",
        " 'accuracy',\n",
+       " 'top_k_accuracy',\n",
        " 'roc_auc',\n",
        " 'roc_auc_ovr',\n",
        " 'roc_auc_ovo',\n",
@@ -162,6 +164,7 @@
        " 'neg_log_loss',\n",
        " 'neg_brier_score',\n",
        " 'adjusted_rand_score',\n",
+       " 'rand_score',\n",
        " 'homogeneity_score',\n",
        " 'completeness_score',\n",
        " 'v_measure_score',\n",
@@ -191,7 +194,7 @@
        " 'jaccard_weighted']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +230,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {
       "image/png": {
        "width": 900
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +271,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {
       "image/png": {
        "width": 300
@@ -290,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +303,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {
       "image/png": {
        "width": 150
@@ -322,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +335,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {
       "image/png": {
        "width": 150
@@ -354,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +367,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {
       "image/png": {
        "width": 200
@@ -386,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +399,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {
       "image/png": {
        "width": 200
@@ -411,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +424,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {
       "image/png": {
        "width": 500
@@ -450,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +686,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +706,7 @@
        "(569, 32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1040,7 @@
        "[8 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1085,7 @@
        "array(['B', 'M'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1112,7 @@
        "array([1, 0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1132,7 @@
        "[(0, 357), (1, 212)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1176,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {
       "image/png": {
        "width": 400
@@ -1188,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1229,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {
       "image/png": {
        "width": 800
@@ -1241,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1279,7 @@
        "[('B', 0.632), ('M', 0.368)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1371,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 32,
      "metadata": {
       "image/png": {
        "width": 500
@@ -1397,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1460,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 35,
      "metadata": {
       "image/png": {
        "width": 600
@@ -1476,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1668,15 +1671,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best training accuracy: 0.980\n",
-      "Best training parameters: {'sgdclassifier__alpha': 0.0007431022427827232, 'sgdclassifier__average': True, 'sgdclassifier__l1_ratio': 0.016967121881328873}\n"
+      "Best training accuracy: 0.978\n",
+      "Best training parameters: {'sgdclassifier__alpha': 0.024006367787119023, 'sgdclassifier__average': False, 'sgdclassifier__l1_ratio': 0.3181909674748601}\n"
      ]
     }
    ],
@@ -1704,14 +1707,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.956\n"
+      "Test accuracy: 0.982\n"
      ]
     }
    ],
@@ -1735,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1764,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1796,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1815,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2658,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4228,7 +4231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4414,9 +4417,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mlweek",
    "language": "python",
-   "name": "python3"
+   "name": "mlweek"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4428,7 +4431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
