--- a/notebooks/7a - Exercise - Hotel Bookings.ipynb
+++ b/notebooks/7a - Exercise - Hotel Bookings.ipynb
@@ -2037,9 +2037,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mlweek",
    "language": "python",
-   "name": "python3"
+   "name": "mlweek"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2051,7 +2051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
