--- a/notebooks/Extra - Hospital Readmission After Diabetes Care.ipynb
+++ b/notebooks/Extra - Hospital Readmission After Diabetes Care.ipynb
@@ -1330,7 +1330,7 @@
    ],
    "source": [
     "plt.subplots(figsize=(8,6))\n",
-    "sns.distplot(data.readmitted_lt30, kde=False);"
+    "sns.histplot(data.readmitted_lt30, kde=False);"
    ]
   },
   {
@@ -1364,8 +1364,8 @@
     "f, axs = plt.subplots(17, 2, figsize=(20,90))\n",
     "\n",
     "for i, feat in enumerate(X_train.T):\n",
-    "    sns.distplot(feat[y_train==0], ax=axs.flat[i], kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[0], len(y_train[y_train==0])))\n",
-    "    sns.distplot(feat[y_train==1], ax=axs.flat[i], kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[1], len(y_train[y_train==1])))\n",
+    "    sns.histplot(feat[y_train==0], ax=axs.flat[i], color='steelblue', stat='density', common_norm=False, kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[0], len(y_train[y_train==0])))\n",
+    "    sns.histplot(feat[y_train==1], ax=axs.flat[i], color='orange',    stat='density', common_norm=False, kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[1], len(y_train[y_train==1])))\n",
     "    axs.flat[i].set_title('{}:  mean: {}  std: {}'.format(list(data.columns)[1:][i], abs(feat.mean().round(2)), feat.std().round(2)))\n",
     "    axs.flat[i].legend()\n",
     "plt.tight_layout();"
@@ -1631,8 +1631,8 @@
     "f, axs = plt.subplots(17, 2, figsize=(20,90))\n",
     "\n",
     "for i, feat in enumerate(X_train_std.T):\n",
-    "    sns.distplot(feat[y_train==0], ax=axs.flat[i], kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[0], len(y_train[y_train==0])))\n",
-    "    sns.distplot(feat[y_train==1], ax=axs.flat[i], kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[1], len(y_train[y_train==1])))\n",
+    "    sns.histplot(feat[y_train==0], ax=axs.flat[i], color='steelblue', stat='density', common_norm=False, kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[0], len(y_train[y_train==0])))\n",
+    "    sns.histplot(feat[y_train==1], ax=axs.flat[i], color='orange',    stat='density', common_norm=False, kde=False, label='{}: {}'.format(np.unique(data.readmitted_lt30)[1], len(y_train[y_train==1])))\n",
     "    axs.flat[i].set_title('{}:  mean: {}  std: {}'.format(list(data.columns)[1:][i], abs(feat.mean().round(2)), feat.std().round(2)))\n",
     "    axs.flat[i].legend()\n",
     "plt.tight_layout();"
@@ -3679,9 +3679,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mlweek",
    "language": "python",
-   "name": "python3"
+   "name": "mlweek"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3693,7 +3693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
