Added Google Colab data upload statements

--- a/notebooks/5 - Credit Card Fraud.ipynb
+++ b/notebooks/5 - Credit Card Fraud.ipynb
@@ -151,6 +151,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "files.upload()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -204,7 +214,11 @@
     }
    ],
    "source": [
+    "# Use when reading local CSV file\n",
     "df = pd.read_csv(infile)\n",
+    "\n",
+    "# Use after uploading CSV file to Google Colab\n",
+    "df = pd.read_csv('/content/credit_card_fraud.csv')\n",
     "\n",
     "['{}: {}'.format(i, name) for (i, name) in enumerate(list(df.columns))]"
    ]
