--- a/notebooks/6 - Cycling Counts.ipynb
+++ b/notebooks/6 - Cycling Counts.ipynb
@@ -120,6 +120,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "files.upload()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -193,7 +203,11 @@
     "                'June', 'March', 'May', 'November', 'October', 'September', \n",
     "                '2014', '2015', '2016', '2017', '2018']\n",
     "\n",
+    "# Use when reading local CSV file\n",
     "df = pd.read_csv(infile, usecols=keep_columns)\n",
+    "\n",
+    "# Use after uploading CSV file to Google Colab\n",
+    "df = pd.read_csv('/content/auckland_cycling_weather_and_holidays.csv', usecols=keep_columns)\n",
     "\n",
     "df = df.set_index(pd.DatetimeIndex(df['datetime']))\n",
     "df.drop(['datetime'], axis=1, inplace=True)\n",
