--- a/notebooks/7a - Exercise - Hotel Bookings.ipynb
+++ b/notebooks/7a - Exercise - Hotel Bookings.ipynb
@@ -96,13 +96,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "files.upload()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "bookings_filepath = '../data/hotel_bookings.csv'\n",
     "\n",
-    "df_raw = pd.read_csv(bookings_filepath)"
+    "# Use when reading local CSV file\n",
+    "df_raw = pd.read_csv(bookings_filepath)\n",
+    "\n",
+    "# Use after uploading CSV file to Google Colab\n",
+    "df_raw = pd.read_csv('/content/hotel_bookings.csv')"
    ]
   },
   {
